Closed Bug 1421877 Opened 7 years ago Closed 7 years ago

Fix warning spam in EditorDOMPointBase

Categories

(Core :: DOM: Editor, defect)

56 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: regression)

Attachments

(1 file)

EditorDOMPointBase has some wrong NS_WARNING_ASSERTION. They cause a lot of warning spam.
Comment on attachment 8933204 [details]
Bug 1421877 - Fix some warnings which hit (almost) always in EditorDOMPointBase

https://reviewboard.mozilla.org/r/204146/#review209666
Attachment #8933204 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/fba5a40806a6
Fix some warnings which hit (almost) always in EditorDOMPointBase r=m_kato
https://hg.mozilla.org/mozilla-central/rev/fba5a40806a6
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: